@@ -357,7 +357,6 @@ public class EntityResolver implements MappingNamespace, Serializable {
 
     public synchronized void addDataMap(DataMap map) {
         if (!maps.contains(map)) {
-            checkForDuplicatedNames(map);
             maps.add(map);
             map.setNamespace(this);
             refreshMappingCache();
@@ -368,39 +367,6 @@ public class EntityResolver implements MappingNamespace, Serializable {
         if (mappingCache == null) {
             refreshMappingCache();
         }
-    }
-
-    private void checkForDuplicatedNames(DataMap map) {
-        for(DbEntity entity : map.getDbEntities()) {
-            DbEntity foundDbEntity = getDbEntity(entity.getName());
-            if(foundDbEntity != null) {
-                processWarning(entity.getName(), map.getName(), foundDbEntity.getDataMap().getName());
-            }
-        }
-        for(ObjEntity entity : map.getObjEntities()) {
-            ObjEntity foundObjEntity = getObjEntity(entity.getName());
-            if(foundObjEntity != null) {
-                processWarning(entity.getName(), map.getName(), foundObjEntity.getDataMap().getName());
-            }
-        }
-        for(Procedure procedure : map.getProcedures()) {
-            Procedure foundProcedure = getProcedure(procedure.getName());
-            if(foundProcedure != null) {
-                processWarning(procedure.getName(), map.getName(), foundProcedure.getDataMap().getName());
-            }
-        }
-        for(Embeddable embeddable : map.getEmbeddables()) {
-            Embeddable foundEmbeddable = getEmbeddable(embeddable.getClassName());
-            if(foundEmbeddable != null) {
-                processWarning(embeddable.getClassName(), map.getName(), foundEmbeddable.getDataMap().getName());
-            }
-        }
-    }
-
-    private void processWarning(String duplicatedName, String dataMapName, String originalDataMapName) {
-        logger.warn("Duplicated name " + duplicatedName + " was found in " +
-                dataMapName + ". This name was also found in " +
-                originalDataMapName + ".");
     }
 
     /**
